src/styles/components/SubmissionViewer.scss
.submission-viewer-button-container {
  position: relative;
  .submission-viewer-button {
    position: relative;
    width: 13.3rem;
    height: 13.3rem;
    background: none;
    padding: 0;
    margin: 0;
    border: none;
    &:disabled {
      background: none;
      opacity: 0.5;
    }
    .submission-img {
      width: 100%;
      height: 100%;
      background-size: cover;
      border: 0.4rem solid $white;
      border-radius: 50%;
    }
    .magnify-icon {
      position: absolute;
      bottom: 0;
      right: 0;
      border-radius: 50%;
      width: 4rem;
      height: 4rem;
      display: flex;
      justify-content: center;
      align-items: center;
    }
    // compact view
    &.compact {
      height: 4.1rem;
      width: 10.5rem;
      margin: 0 auto;
      .submission-img {
        position: absolute;
        top: 0;
        z-index: 1;
        width: 4.1rem;
        height: 4.1rem;
        border: 0.2rem solid $black-text;
      }
      .magnify-icon {
        right: 0;
        bottom: 0.8rem;
        width: 9rem;
        height: 2.5rem;
        border: 0.2rem solid $black-text;
        border-radius: 0.8rem;
        padding-left: 2rem;
        p {
          font-size: 1rem;
          padding-top: 0.1rem;
        }
        img {
          width: 1.3rem;
        }
      }
    }
  }
  .disabled-lock-icon {
    position: absolute;
    left: 0.6rem;
    top: 0.2rem;
    z-index: 1;
    pointer-events: none;
  }
  .submission-viewer-vote {
    position: absolute;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 1;
    width: 13.4rem;
    height: 3.4rem;
    top: 0.4rem;
    left: -0.8rem;
    padding-left: 1.2rem;
    padding-right: 1.2rem;
    span {
      font-size: 1.4rem;
    }
    .vote-lock-icon {
      width: 1.8rem;
    }
  }
}

.submission-modal-wrapper {
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 100%;
  z-index: 100;
  opacity: 0;
  transform: scale(0);
  transition: all 0.3s cubic-bezier(0.23, 1.5, 0.32, 1),
    opacity 0.3s cubic-bezier(0.23, 1.5, 0.32, 1);
  overflow-y: scroll;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;

  &.showing {
    opacity: 1;
    transform: scale(1);
  }

  &__top-bar {
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    background-color: $gray;
    position: absolute;
    top: 0;
    left: 0;
    //   height: 10vh;

    .close-btn {
      color: $text-gray-light;
      background-color: transparent;
      border: none;
      font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
      text-transform: uppercase;
      font-size: 14px;
      font-weight: 600;
      line-height: 21px;
    }
  }

  &__content {
    position: fixed;
    bottom: 0;
    left: 0;
    background-color: #ffff;
    width: 100%;
    //   height: 100%;
    top: 100px;
    bottom: 200px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow-y: scroll;
    overflow-x: scroll;
  }

  &__bottom-bar {
    position: fixed;
    bottom: 0;
    right: 0;
    background-color: $gray;
    width: 100%;
    height: 200px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    h4 {
      color: $black-text;
      font-size: 26px;
      line-height: 36px;
      font-weight: 500;
      text-align: center;
      margin: 15px;
    }

    button {
      width: 153px;
      height: 50px;
      padding: 13px 17px;
      background-color: $white;
      border: 3px solid $aqua-light;
      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1),
        inset 0px 1px 2px rgba(0, 0, 0, 0.05);
      border-radius: 8px;
      font-size: 19px;
      line-height: 24px;
      color: $black-border;
    }
  }
}

